# Numina

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: Numina_App.h  Numina_Event.h  Numina_Graphics.h  Numina_Plugin.h
plugins/: CMakeLists.txt
plugins/Numina_SDL2/: CMakeLists.txt  Numina_SDL2.cpp  Numina_SDL2.h
src/: Numina.cpp
